--- a/Restaurant Roulette/src/main/res/layout/fragment_history_list.xml
+++ b/Restaurant Roulette/src/main/res/layout/fragment_history_list.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/margin_horizontal_listitem"
-    android:paddingRight="@dimen/margin_horizontal_listitem"
-    android:paddingBottom="@dimen/margin_vertical_listitem"
-    android:paddingTop="@dimen/margin_vertical_listitem"
+    android:paddingBottom="4dp"
+    android:paddingTop="4dp"
     android:background="@color/ics_gray" >
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@android:id/list"
-        android:background="@drawable/card_background_normal"
-        android:listSelector="@android:color/transparent" />
+        android:id="@android:id/list" />
 
     <TextView
         android:layout_width="wrap_content"
