--- a/Restaurant Roulette/src/main/res/layout/restaurant_answer.xml
+++ b/Restaurant Roulette/src/main/res/layout/restaurant_answer.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@drawable/card_background_normal">
+    android:background="@drawable/card_background"
+    android:clickable="true">
 
     <TextView
         android:layout_width="wrap_content"
