--- a/Restaurant Roulette/src/main/res/values/arrays.xml
+++ b/Restaurant Roulette/src/main/res/values/arrays.xml
@@ -19,4 +19,19 @@
         <item>Other</item>
     </string-array>
 
+    <string-array name="notes_hints">
+        <item>Was the food delicious? Write it here and relive the memories!</item>
+        <item>Delicious, friendly staff, going back for sure!</item>
+        <item>Type in anything you\'d like to remember</item>
+        <item>I think the server spat in my food</item>
+        <item>The steak sucked. Remember it for next time.</item>
+        <item>The waitress gave me her phone number, it\'s ###-###-####</item>
+        <item>The food was a bit too pricey for the quality</item>
+        <item>Amazing fudge brownie for dessert!</item>
+        <item>I should have just stayed at home&#8230;</item>
+        <item>Great first date place</item>
+        <item>Good place to take a client from work</item>
+        <item>Write down the address, so you\'ll never forget!</item>
+    </string-array>
+
 </resources>
