--- a/Restaurant Roulette/src/main/res/menu/main.xml
+++ b/Restaurant Roulette/src/main/res/menu/main.xml
@@ -41,4 +41,10 @@
         android:orderInCategory="220"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/menu_email_developer"
+        android:title="@string/menu_email_developer"
+        android:orderInCategory="230"
+        app:showAsAction="never" />
+
 </menu>
