added "rate app" menu option

--- a/Restaurant Roulette/src/main/res/menu/main.xml
+++ b/Restaurant Roulette/src/main/res/menu/main.xml
@@ -47,4 +47,10 @@
         android:orderInCategory="230"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/menu_rate_app"
+        android:title="@string/menu_rate_app"
+        android:orderInCategory="240"
+        app:showAsAction="never" />
+
 </menu>
